Tue Jan 29 15:28:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array_out.c src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/compute.c:
	* src/odbc/unittests/connect2.c src/odbc/unittests/const_params.c:
	* src/odbc/unittests/copydesc.c src/odbc/unittests/cursor1.c:
	* src/odbc/unittests/cursor2.c src/odbc/unittests/cursor3.c:
	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor5.c:
	* src/odbc/unittests/data.c src/odbc/unittests/date.c:
	* src/odbc/unittests/error.c src/odbc/unittests/funccall.c:
	* src/odbc/unittests/genparams.c src/odbc/unittests/getdata.c:
	* src/odbc/unittests/hidden.c src/odbc/unittests/lang_error.c:
	* src/odbc/unittests/moreandcount.c src/odbc/unittests/norowset.c:
	* src/odbc/unittests/params.c src/odbc/unittests/prepare_results.c:
	* src/odbc/unittests/print.c src/odbc/unittests/putdata.c:
	* src/odbc/unittests/raiserror.c src/odbc/unittests/rebindpar.c:
	* src/odbc/unittests/scroll.c src/odbc/unittests/t0001.c:
	* src/odbc/unittests/t0002.c src/odbc/unittests/t0003.c:
	* src/odbc/unittests/t0004.c src/odbc/unittests/tables.c:
	* src/odbc/unittests/test64.c src/odbc/unittests/timeout.c:
	* src/odbc/unittests/timeout2.c src/odbc/unittests/timeout4.c:
	* src/odbc/unittests/transaction.c src/odbc/unittests/typeinfo.c:
	* src/odbc/unittests/warning.c:
	- reuse reuse reuse!

Tue Jan 29 10:34:41 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/unittests/getdata.c:
	- handle errors from convert_tds2sql

Sun Jan 27 18:35:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: 
	- implemented SQL_ATTR_CONNECTION_DEAD

Thu Jan 24 22:14:31 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/tds/vstrbuild.c:
	- va_list cleanups

Thu Jan 24 22:01:41 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/describecol.in: