@@ -1,3 +1,7 @@
+Thu Jan 21 10:12:42 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/convert_error.c src/odbc/unittests/genparams.c:
+	- more reuse
+
 Tue Jan 29 15:28:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/array_out.c src/odbc/unittests/common.c:
 	* src/odbc/unittests/common.h src/odbc/unittests/compute.c:
@@ -128,4 +132,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2480 2008/01/29 14:30:48 freddy77 Exp $
+$Id: ChangeLog,v 1.2481 2008/01/31 09:13:05 freddy77 Exp $
